# visualdb

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  listen.py  log.txt  readme.md
include/: render.h  shape.h  visualdb.h
include/glad/: glad.h
python/: listen.py  listenthinclient.py  log.txt  process.py  query.txt
shaders/: coloredcircle.fs.glsl  coloredcircle_outline.fs.glsl  coloredshape.fs.glsl  coloredshape.vs.glsl  glyph.fs.glsl  glyph.vs.glsl
src/: glad.c  render.cpp  update.cpp  visualdb.cpp  visualdb.h
